# 2024-SAE-ME-HACKATHON

./: README.md
catkin_ws/devel/include/smarp_msgs/: camInfo.h  lidarStatus.h  objInfo.h  objectStatus.h  recogObj.h
catkin_ws/devel/lib/opencv_test/: opencv_test
catkin_ws/devel/lib/pkgconfig/: camera_op.pc  contest.pc  lidar_op.pc  smarp_msgs.pc
catkin_ws/devel/share/camera_op/cmake/: camera_opConfig.cmake
catkin_ws/devel/share/contest/cmake/: contestConfig.cmake
catkin_ws/devel/share/lidar_op/cmake/: lidar_opConfig.cmake
catkin_ws/devel/share/roseus/ros/smarp_msgs/: manifest.l
catkin_ws/devel/share/smarp_msgs/cmake/: smarp_msgs-msg-extras.cmake  smarp_msgs-msg-paths.cmake  smarp_msgsConfig.cmake
catkin_ws/src/contest/: CMakeLists.txt
catkin_ws/src/contest/launch/: timelap_usb_cam.launch  usb_cam.launch
catkin_ws/src/contest/scripts/: cam_lidar_pub.py  cam_lidar_pub_nogrp.py  cam_pub.py  carstop.py  controller.py  controller_inline.py  controller_outline.py  controller_outline_hard.py  controller_outline_hard2.py  controller_outline_hard_final.py  frontParking.py  kdy_cam.py  kdy_control.py  lidar_idx_cal.py  lidar_pub.py  pparkingTest.py  timelap.py  timelap_twoline.py  timelap_twoline_final.py  trackar.py
catkin_ws/src/contest/scripts/.ipynb_checkpoints/: camera_kijun_copy-checkpoint.py  trafficlight-checkpoint.py
catkin_ws/src/contest/scripts/ultrasonic_ros/: ultrasonic_ros.ino
catkin_ws/src/smarp_msgs/: CMakeLists.txt
catkin_ws/src/smarp_msgs/msg/: camInfo.msg  lidarStatus.msg  objInfo.msg  objectStatus.msg  recogObj.msg
(+29 files in other folders)
